seaqt/QtNetwork/gen_qrestreply.h

class QNetworkReply;
class QRestReply;
typedef struct QNetworkReply QNetworkReply;
typedef struct QRestReply QRestReply;
QRestReply* QRestReply_new(QNetworkReply* reply);
void QRestReply_swap(QRestReply* self, QRestReply* other);
QNetworkReply* QRestReply_networkReply(const QRestReply* self);
struct seaqt_string QRestReply_readBody(QRestReply* self);
struct seaqt_string QRestReply_readText(QRestReply* self);
bool QRestReply_isSuccess(const QRestReply* self);
int QRestReply_httpStatus(const QRestReply* self);
bool QRestReply_isHttpStatusSuccess(const QRestReply* self);
bool QRestReply_hasError(const QRestReply* self);
int QRestReply_error(const QRestReply* self);
struct seaqt_string QRestReply_errorString(const QRestReply* self);